# python-project-50

./: Makefile  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: pyci.yml
gendiff/: __init__.py  file_loader.py  generate_diff.py  parser.py  parser_CL.py  parser_of_CL.py
gendiff/formats/: format.py  plain.py  stylish.py
gendiff/scripts/: file_loader.py  gendiff.py  generate_diff.py  parser_of_cl.py
tests/: test.py  test_everything.py  test_gendiff.py  test_parser_of_cl.py
tests/test_data/output/plain/: json.txt
tests/test_data/output/tree/: json.txt
