[project]
authors = [
    {name = "Hexlet student"}]
name = "hexlet-code"
version = "0.1.0"
description = "Second project hexlet school"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"

